@@ -15,7 +15,7 @@ import doctest
 import unittest
 
 from genshi.core import Stream
-from genshi.template.core import Template
+from genshi.template.core import Template, TemplateSyntaxError
 
 
 class TemplateTestCase(unittest.TestCase):
@@ -41,11 +41,33 @@ class TemplateTestCase(unittest.TestCase):
         self.assertEqual(Stream.TEXT, parts[0][0])
         self.assertEqual('${bla}', parts[0][1])
 
+    def test_interpolate_dobuleescaped(self):
+        parts = list(Template._interpolate('$$${bla}'))
+        self.assertEqual(2, len(parts))
+        self.assertEqual(Stream.TEXT, parts[0][0])
+        self.assertEqual('$', parts[0][1])
+        self.assertEqual(Template.EXPR, parts[1][0])
+        self.assertEqual('bla', parts[1][1].source)
+
     def test_interpolate_short(self):
         parts = list(Template._interpolate('$bla'))
         self.assertEqual(1, len(parts))
         self.assertEqual(Template.EXPR, parts[0][0])
         self.assertEqual('bla', parts[0][1].source)
+
+    def test_interpolate_short_escaped(self):
+        parts = list(Template._interpolate('$$bla'))
+        self.assertEqual(1, len(parts))
+        self.assertEqual(Stream.TEXT, parts[0][0])
+        self.assertEqual('$bla', parts[0][1])
+
+    def test_interpolate_short_doubleescaped(self):
+        parts = list(Template._interpolate('$$$bla'))
+        self.assertEqual(2, len(parts))
+        self.assertEqual(Stream.TEXT, parts[0][0])
+        self.assertEqual('$', parts[0][1])
+        self.assertEqual(Template.EXPR, parts[1][0])
+        self.assertEqual('bla', parts[1][1].source)
 
     def test_interpolate_short_starting_with_underscore(self):
         parts = list(Template._interpolate('$_bla'))
@@ -82,6 +104,62 @@ class TemplateTestCase(unittest.TestCase):
         self.assertEqual(1, len(parts))
         self.assertEqual(Template.EXPR, parts[0][0])
         self.assertEqual('foo0', parts[0][1].source)
+
+    def test_interpolate_short_starting_with_digit(self):
+        parts = list(Template._interpolate('$0bla'))
+        self.assertEqual(1, len(parts))
+        self.assertEqual(Stream.TEXT, parts[0][0])
+        self.assertEqual('$0bla', parts[0][1])
+
+    def test_interpolate_short_containing_digit(self):
+        parts = list(Template._interpolate('$foo0'))
+        self.assertEqual(1, len(parts))
+        self.assertEqual(Template.EXPR, parts[0][0])
+        self.assertEqual('foo0', parts[0][1].source)
+
+    def test_interpolate_full_nested_brackets(self):
+        parts = list(Template._interpolate('${{1:2}}'))
+        self.assertEqual(1, len(parts))
+        self.assertEqual(Template.EXPR, parts[0][0])
+        self.assertEqual('{1:2}', parts[0][1].source)
+
+    def test_interpolate_full_mismatched_brackets(self):
+        try:
+            list(Template._interpolate('${{1:2}'))
+        except TemplateSyntaxError, e:
+            pass
+        else:
+            self.fail('Expected TemplateSyntaxError')
+
+    def test_interpolate_quoted_brackets_1(self):
+        parts = list(Template._interpolate('${"}"}'))
+        self.assertEqual(1, len(parts))
+        self.assertEqual(Template.EXPR, parts[0][0])
+        self.assertEqual('"}"', parts[0][1].source)
+
+    def test_interpolate_quoted_brackets_2(self):
+        parts = list(Template._interpolate("${'}'}"))
+        self.assertEqual(1, len(parts))
+        self.assertEqual(Template.EXPR, parts[0][0])
+        self.assertEqual("'}'", parts[0][1].source)
+
+    def test_interpolate_quoted_brackets_3(self):
+        parts = list(Template._interpolate("${'''}'''}"))
+        self.assertEqual(1, len(parts))
+        self.assertEqual(Template.EXPR, parts[0][0])
+        self.assertEqual("'''}'''", parts[0][1].source)
+
+    def test_interpolate_quoted_brackets_4(self):
+        parts = list(Template._interpolate("${'''}\"\"\"'''}"))
+        self.assertEqual(1, len(parts))
+        self.assertEqual(Template.EXPR, parts[0][0])
+        self.assertEqual("'''}\"\"\"'''", parts[0][1].source)
+
+    def test_interpolate_quoted_brackets_5(self):
+        parts = list(Template._interpolate(r"${'\'}'}"))
+        self.assertEqual(1, len(parts))
+        self.assertEqual(Template.EXPR, parts[0][0])
+        self.assertEqual(r"'\'}'", parts[0][1].source)
 
     def test_interpolate_mixed1(self):
         parts = list(Template._interpolate('$foo bar $baz'))
